# AKAGAMI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  README.md  SECURITY.md  akagami-gui.html  akagami-red-gui.html  docker-compose.yml  docker-setup.sh  install-windows.bat  install-windows.ps1  install.sh  install_tools.sh  package.json  pyproject.toml  requirements.txt  scenario.md  setup.py  simple-gui.html  start-windows.bat  start.sh  stop-windows.bat  stop.sh  sudo_install_tools.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: cli.py  main.py  main_simple.py
backend/core/: config.py  database.py
backend/modules/: web_security_old.py  web_security_simple.py
backend/routers/: auth.py  junior_pentest.py
config/: cleartax_mission.yaml  example_bug_bounty.yaml  example_mission.yaml  mission.yaml  priceline.yaml  tools.yaml
docs/: example_scenario.md  quickstart.md
docs/releases/: v2.0.0-beta.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
reconforge/: cli.py  diagnostics.py  watcher.py  workspace.py
reconforge/agents/: ai_redteam.py  base.py  browser.py  exploit_planner.py  js_analysis.py  osint.py  recon.py  vuln.py
reconforge/assets/: __init__.py
reconforge/config/: __init__.py  tools.yaml
reconforge/intel/: http_inventory.py  models.py  store.py
reconforge/llm/: __init__.py  fallback.py  router.py
reconforge/memory/: episodic.py  semantic.py  summarizer.py  working.py
tests/: conftest.py  test_auth_runtime.py  test_branding.py  test_cli_approval.py  test_cli_diagnostics.py  test_cli_ux.py  test_http_inventory.py  test_intel.py  test_memory.py  test_orchestrator.py  test_package_metadata.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_recon_dry_run.py  test_tool_safety.py  test_tools.py  test_trust_boundary.py  test_v2.py  test_workspace.py
(+44 files in other folders)
